--- a/assignment2.ipynb
+++ b/assignment2.ipynb
@@ -476,11 +476,11 @@
         "df[var2].value_counts()"
       ],
       "metadata": {
-        "id": "DnSRRouPLPtc",
-        "outputId": "9bee794c-8e34-40a6-a2b5-194cd35ac4aa",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "DnSRRouPLPtc",
+        "outputId": "9bee794c-8e34-40a6-a2b5-194cd35ac4aa"
       },
       "id": "DnSRRouPLPtc",
       "execution_count": 51,
@@ -511,7 +511,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "I decided to make all cases where the `SentenceTypeAllChargesAtConvictionInContactEvent` was equal to code 4 have a value of 0 for the `ImposedSentenceAllChargeInContactEvent'`. This is because this code 4 means that the charges are pending, dismissed,  or deferred. Secondly I decided to make all cases where the `SentenceTypeAllChargesAtConvictionInContactEvent` was equal to code 9 have a value of `np.nan` for the `ImposedSentenceAllChargeInContactEvent'`. This was because the c-ode 9 represented \"Not applicable\" according to the codebook."
+        "I decided to make all cases where the `SentenceTypeAllChargesAtConvictionInContactEvent` was equal to code 4 have a value of 0 for the `ImposedSentenceAllChargeInContactEvent'`. This is because this code 4 means that the charges are pending, dismissed,  or deferred. Secondly I decided to make all cases where the `SentenceTypeAllChargesAtConvictionInContactEvent` was equal to code 9 have a value of `np.nan` for the `ImposedSentenceAllChargeInContactEvent'`. This was because the code 9 represented \"Not applicable\" according to the codebook."
       ],
       "metadata": {
         "id": "zX7Iukuatu4Z"
